`find` command needs track name. Add tests